[package]
name = "day15"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
counter = "0.5.7"
itertools = "0.12.0"
#![feature(slice_split_once)]

[profile.release]
opt-level = 3

[lib]
path = "src/main.rs"

